# pulsarDb

./: CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  pulsarDbLib.py
cmt/: requirements
data/: PulsarDb.tpl  PulsarDb_orbital_bt.tpl  PulsarDb_orbital_dd.tpl  PulsarDb_primary.tpl  PulsarDb_spin_freq.tpl  PulsarDb_spin_hp.tpl  PulsarDb_spin_per.tpl  PulsarEph.tpl  baddb_badparenthesis1.txt  baddb_badparenthesis2.txt  baddb_badparenthesis3.txt  baddb_badparenthesis4.txt  baddb_badparenthesis5.txt  baddb_badparenthesis6.txt  baddb_badparenthesis7.txt  baddb_badparenthesis8.txt  baddb_escapedquote.txt  baddb_nestedvector.txt  baddb_noextname.txt  baddb_noheader.txt  baddb_nosuchephstyle.txt  baddb_nosuchextname.txt  baddb_nosuchfield.txt  baddb_quotedvector.txt  baddb_toolittlefield.txt  baddb_toomanyfield.txt  baddb_unbalancedquote.txt  baddb_vectoredscalar.txt  column_samples.fits  groD4-dc2v4r2.fits  okdb_emptyfield.txt  okdb_extraescape.txt  okdb_extraquote.txt  okdb_extraspace.txt  okdb_notallcolumn1.txt  okdb_notallcolumn2.txt  psrdb_binary.txt  psrdb_spin.txt  test_TextPulsarDb.tpl  test_pulsarDb.tpl  (+10 more)
doc/: release.notes
pfiles/: gtephcomp.par  gtephem.par  gtpulsardb.par
pulsarDb/: AbsoluteTime.h  BtModelEph.h  CanonicalTime.h  Duration.h  Ell1ModelEph.h  EphChooser.h  EphComputer.h  EphComputerApp.h  EphStatus.h  FormattedEph.h  FrequencyEph.h  GlastTime.h  HighPrecisionEph.h  OrbitalEph.h  PdotCanceler.h  PeriodEph.h  PulsarDb.h  PulsarDbApp.h  PulsarEph.h  PulsarToolApp.h  SimpleDdEph.h  TextPulsarDb.h  TimeConstants.h  TimingModel.h
src/: .mainpage.h.swp  BtModelEph.cxx  Ell1ModelEph.cxx  EphChooser.cxx  EphComputer.cxx  EphComputerApp.cxx  EphStatus.cxx  FrequencyEph.cxx  HighPrecisionEph.cxx  MssModelEph.cxx  OrbitalEph.cxx  PdotCanceler.cxx  (+9 more)
(+28 files in other folders)
